# Flask_tryout

./: .pdm-python  flask_app.py  huiswerk.txt  pyproject.toml
