[project]
name = "Flask_tryout"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Jurgen B", email = "jurgenamanda@gmail.com"},
]
dependencies = ["flask>=3.1.0"]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
